<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyMessenger</string>
    <string name="action_settings">Settings</string>
    <string name="answer_to">Answer to…</string>
    <string name="menuitem_addservice">Add service</string>
    <string name="menuitem_removeservice">Remove service</string>
    <string name="menu4">Settings</string>
    <string name="menu5">Help</string>
    <string name="menu6">Developers</string>
    <string name="menu7">Leave a review</string>
    <string name="menu8">$Donate$</string>
    <string name="vk_retry">Retry</string>
    
    <string name="action_item_1">Item 1</string>
	<string name="action_item_2">Item 2</string>
	<string name="action_item_3">Item 3</string>

    <item name="SERVICE_BUTTON_SERVICE_KEY" type="id"/>
	
	
	<string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="fb_app_id">1477753472465048</string>

    <!-- Services names -->
    <string name="service_name_all">All</string>
    <string name="service_name_sms">Sms</string>
    <string name="service_name_vk">Vkontakte</string>
    <string name="service_name_tw">Twitter</string>
    <string name="service_name_fb">Facebook</string>

</resources>
